Refactor task listeners and enhance service task handling.
Replaced `ReceiveTaskParseListener` with a more generic `BpmnTaskParseListener` to support multiple task types. Added `ServiceTaskHelper` to manage expectations for service tasks and updated the BPMN process accordingly. Adjusted integration tests and configuration to reflect the changes.